--- a/consultations.html
+++ b/consultations.html
@@ -41,7 +41,7 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="index.html">
                         <img src="assets/images/ssc-logo-96x36.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
@@ -56,9 +56,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html#top">Work</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html#top">Consultations</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page3.html#top">Contact</a>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/@standardstoryco" target="_blank">
@@ -291,7 +291,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="loDO81gU/VNzWwCmA6aBf/K9MxbxFX4dhCteOtkRgOxG/FM8kRrE8B5lF1/VZ4uoJoboSA7Fa+2rC6Yzh9Lj/LsCOhnTYdynvkn2Sx/+YsrVrWBKsQEMI/y0LGfg6+NH">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="eTp9JjMYgAxW6sGV6qwxQ5GSMtEjWRHEyoeKmWhKDv3MaxaMwFOaXPryUMca5GxJkTyl4xV1b0d3GH2iNLarGty2cax2RwP7wMlyKGpf40NWoINerLFxMrRouBKK5qQ6">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
