--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="index.html">
                         <img src="assets/images/ssc-logo-96x36.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
@@ -53,9 +53,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html#top">Work</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html#top">Consultations</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page3.html#top">Contact</a>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/@standardstoryco" target="_blank">
@@ -86,7 +86,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="0hfxUhOE3uz8UJxvs4nJEoL+3J31VYqMHLR4QgZYVW9hiQ1dERF9LKmUSWWdYvdDqqsgxYd+i4fIdQ9aj0d/Dp856O+xZZyE7PyjvqqRJ74D3Jrd2cZYV1jYUbVc3Nkd">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7Gf2zKfeu76AlGf7zUFEXeOs/urqS7zy9Gul093vTO2/7nKu/MVlEphxtW9vb5AyzdOD1ZlLY6YFD/LuRLXJF7I76Zp3HHUf3W9Un4Ik13mTyYdtfsPEF0MR/kwoGuhr">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 -Kent</div>
