--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
+                    <a href="index.html">
                         <img src="assets/images/ssc-logo-96x36.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
@@ -54,9 +54,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html#top">Work</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html#top">Consultations</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page3.html#top">Contact</a>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/@standardstoryco" target="_blank">
