create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -189,7 +189,7 @@
                         <img src="assets/images/mbr-816x545.jpg" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Brad B.</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>John D.</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
                             <em>Filmmaker</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et lobortis lacus. Proin lorem sapien, fermentum id finibus.</p>
@@ -202,7 +202,7 @@
                         <img src="assets/images/mbr-816x541.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><div><strong>Thomas T.</strong></div></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><div><strong>John D.</strong></div></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
                             <em>Filmmaker</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et lobortis lacus. Proin lorem sapien, fermentum id finibus.<br></p>
@@ -215,7 +215,7 @@
                         <img src="assets/images/mbr-1920x1279.jpg" alt="Mobirise Website Builder" data-slide-to="2" data-bs-slide-to="2">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Arthur C.</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>John D.</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
                             <em>Freelance Editor</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et lobortis lacus. Proin lorem sapien, fermentum id finibus.</p>
@@ -228,7 +228,7 @@
                         <img src="assets/images/mbr-4.jpeg" alt="Mobirise Website Builder" data-slide-to="3" data-bs-slide-to="3">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><div><strong>Jessica S.</strong></div></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><div><strong>John D.</strong></div></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
                             <em>Filmmaker</em></h6>
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et lobortis lacus. Proin lorem sapien, fermentum id finibus.</p>
@@ -291,7 +291,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="eTp9JjMYgAxW6sGV6qwxQ5GSMtEjWRHEyoeKmWhKDv3MaxaMwFOaXPryUMca5GxJkTyl4xV1b0d3GH2iNLarGty2cax2RwP7wMlyKGpf40NWoINerLFxMrRouBKK5qQ6">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WNcMdQgAZDyJZGFMfkVyH7BgXsfDTh33ERnL0t2Exh1gxqPXGL2DjCmXJ9VcJYyH5b3bKXrVq0MI63/2LOHD4GwhcQTfrg55w0mAnc4pcnN+wIhJT3ftFkULnH/oxMeY">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
