create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -56,8 +56,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
@@ -291,7 +290,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Pg+gMMMuTQQ2fbq8INFKlJHJ9hEoqt0oog1M4tb8r4l9LgxX3GJOjw0RNKvVwlnFqaCZJG9SQoU3rCF9sVoWP1U0xaPDaDnrBa/kShE1oc/AW5Gl9JHUOXNmElqucs83">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="660blnM7ZEfh+h/SRrdOORu1x6ykPBK2u64z7k2PcUo2ycxc/epZF8bAY01LoupmadKTEI5eQ0b3t6MEnLKygnPdMufNSdI2ueEvb/tOmAYFBVvidIgCuGsnApQMD3Ov">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
