--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
@@ -86,7 +85,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="SEdD9Krouk0MP4GQMJhBiaRFLEZz/Yzvoi89m7+pl2jto+kC9XVN6ZGWQTqLoKm6WDa9Osy8S/TWNoOKy/nsoJvG2c6E3b9feH4VJZNLjTsbm2RekEAkBeTgcw8d2+cz">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cpvQL4UYRBZARMGJ0a79G5pIMfNUwEtkyphtwyI42UQ+DKf6Aoziy0s3dc2IM7pDtlrdrJ/2lBbWbfZJ1VKfns0MFhXvx3ALWNl/p+o34ri+hKu7tv0Ddb/rLRPRriQa">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 -Kent</div>
