--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Work</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
