create github pages

--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
     <div class="container">
         <div class="mbr-section-head">
             <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2">
-                <strong>View in Action</strong></h4>
+                <center><strong>View in Action</strong></center></h4>
             <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Click on the video in this block to set the link to
                 your own video.</h5>
         </div>
