create github pages

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   
-  <section data-bs-version="5.1" class="menu menu1 cid-tsvaZOBTwm" once="menu" id="menu1-v">
+  <section data-bs-version="5.1" class="menu menu1 cid-tsAH7nBxG8" once="menu" id="menu1-1e">
     
 
     <nav class="navbar navbar-dropdown navbar-expand-lg">
@@ -85,7 +85,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gn70JDA6Jn3h4xmsl4Oz9JeMfLllp6eyAvVsUergaVVno/G/g3WZ1AtDBuVNpIY666uvohjYZuKlu3Dmh5ZXvHyitwPd+mpYMrbwp1fbqNG7ypkuv5Z7Jfb1eRJZ2VXa">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="q3xGF21xCbcRFYvusuJ/slL3fKKRkG6EhqTx6FLGz8I3S3/okUtjaOIq6Gh3W649nvcNn6YveIsUfLpdLnj0Anz7q0H6obsBfkzrRAWke8AYybjYj8aHi3k+dBDZuQ+7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 -Kent</div>
