--- a/consultations.html
+++ b/consultations.html
@@ -37,7 +37,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tsAH7nBxG8" once="menu" id="menu1-1e">
     
 
-    <nav class="navbar navbar-dropdown navbar-expand-lg">
+    <nav class="navbar navbar-dropdown collapsed">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
@@ -288,7 +288,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="CHENWgl2b7LcVI4AMqpTMcqKjhnwX04awjMO/cmU+aCLfc14i8UN3MbyWfo7EyimqGSsI9etBz4wEP6SqxddODTBdEXVG0F2rRmC53RPdQAf565a0dBKD4pVtYW07GtP">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="k+r6QNNRHAZWOSlvCr1+aoQRB9o8TL6ZfS9LztApdfqi1rg041NfoO5CEzjPxKXjzkQRf4YNX3ZyXs/D2lVJIaIshgQyH+S1EFntbUi7CaNjoKU9LLyMd93kFibpXBdo">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
