create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -37,7 +37,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tsAH7nBxG8" once="menu" id="menu1-1e">
     
 
-    <nav class="navbar navbar-dropdown collapsed">
+    <nav class="navbar navbar-dropdown navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
@@ -288,7 +288,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="k+r6QNNRHAZWOSlvCr1+aoQRB9o8TL6ZfS9LztApdfqi1rg041NfoO5CEzjPxKXjzkQRf4YNX3ZyXs/D2lVJIaIshgQyH+S1EFntbUi7CaNjoKU9LLyMd93kFibpXBdo">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="SD1TmTY5Gwm5U4bJNnC71ndfxJrUfkaNsSopgK2y0OT0zjG1q5xX6LJxWGGiWzYJo9sAAt18KsC86sI5gZ+ORTP0YICGAlBYc+Kr34yvWWxt8HnQmYjFNsurSB7TrBf+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
