--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tsAH7nBxG8" once="menu" id="menu1-1e">
     
 
-    <nav class="navbar navbar-dropdown collapsed">
+    <nav class="navbar navbar-dropdown navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
@@ -85,7 +85,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hIQuCSziDMnx5ejZRti0pkq/flvpRakPjor43/iNBYdgi1eKyZro9i9NEWpOtjt5AgLZpKL7er8vngKDdJY67zxnA7L6FkdjhsJdQmTmHGK5Qx28SL6jQml0tlMidd59">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="M1dBMPiimTX2jd0YBbdlj9LL55DZxbeqPw5d9F77dzsWvEIGtrQW4kydxwkqP5e1P3NwrQDtZ5ce75rNKd0Pg/FoMJAHo7i8VjZ5FZIi6/pVVcqNl2uDE43xUgwVyDLk">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 -Kent</div>
