--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tsAH7nBxG8" once="menu" id="menu1-1e">
     
 
-    <nav class="navbar navbar-dropdown collapsed">
+    <nav class="navbar navbar-dropdown navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
