create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -209,13 +209,13 @@
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-816x541.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
+                        <img src="assets/images/ultimo-web-1-765x518.jpeg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><div><strong>John D.</strong></div></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><div><strong>Ultimo D.</strong></div></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">
-                            <em>Filmmaker</em></h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et lobortis lacus. Proin lorem sapien, fermentum id finibus.<br></p>
+                            <em>Freelance Editor</em></h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">I highly recommend that anyone new in their freelancing journey consider consulting from Kent. His advice helped me a ton and it quite literally helped me take my career to a whole new level.<br></p>
                     </div>
                     
                 </div>
@@ -288,7 +288,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="SD1TmTY5Gwm5U4bJNnC71ndfxJrUfkaNsSopgK2y0OT0zjG1q5xX6LJxWGGiWzYJo9sAAt18KsC86sI5gZ+ORTP0YICGAlBYc+Kr34yvWWxt8HnQmYjFNsurSB7TrBf+">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Y76D94qc5bY7CNasSwYIytbgiptT+GlgE0G6tYMgibpAyvaXuj35hycf0Jpc2cQXM8lCzKns1M02kBHSyeSrweAFTown/fwZOZ/IJRyGCy9P1k2qYAN9n/SFP9OGK0YH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
