create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -88,7 +88,7 @@
             <div class="col-12 col-lg-7">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Every film is different.</strong></h1>
                 
-                <p class="mbr-text mbr-fonts-style display-7"><br>That's why <strong>1-on-1</strong> <strong>help</strong> from an experienced filmmaker is so valuable.<br><br>What if one short conversation could...<br><br>Make your film <strong>twice as strong</strong>?<br>Or <strong>save you thousands</strong> of dollars?<br>Or give you <strong>10x the audience</strong>?<br><br>If my YouTube videos helped you, individual coaching takes that guidance to <strong>the next level</strong>, allowing me to provide solutions and strategies <strong>specific to your film</strong>&nbsp;at any stage of the process.<br><br>My goal is to help you&nbsp;<strong>make the best version of your film</strong> and do it with <strong>confidence</strong>.<br><br>I look forward to meeting you.<br><br>-Kent<em><strong><br></strong></em><br></p>
+                <p class="mbr-text mbr-fonts-style display-7"><br>That's why <strong>1-on-1</strong> <strong>help</strong> from an experienced filmmaker is so valuable.<br><br>What if one short conversation could...<br><br>Make your film <strong>twice as strong</strong>?<br>Or <strong>save you thousands</strong> of dollars?<br>Or give you <strong>10x the audience</strong>?<br><br>If my YouTube videos helped you, individual coaching takes that guidance to the next level, allowing me to provide solutions and strategies <strong>specific to you and your film</strong>.<br><br>My goal is to help you&nbsp;<strong>make the best version of your film</strong> and do it with <strong>confidence</strong>.<br><br>I look forward to meeting you.<br><br>-Kent<em><strong><br></strong></em><br></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="https://calendly.com/standardstoryco" target="_blank">Reserve a Date</a></div>
             </div>
         </div>
@@ -275,7 +275,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="CxgArHW+UntoQJVdVK44SHBTCHLBVvtS+GWn6BBRPGLhXaeoisCn4q78luR4qbRywdjC9fYANq6G9gauPcboI9yP9xMuot4hv1TWUbh1z+JxQtLOnnJqoYUWs/RyIDEt">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="teZRhZCL7sJBaW6HunlAgTfBZxMkPGga+gog3Pt+8zTFGv6RzTui7D6/L16nceoqLZxI9oZViVXkK/uQmqDJtdlUnY3YCfrWkYjXADrU2n1UCghnT/Rcqg9rWHaZzUuT">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
