create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -89,7 +89,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Every film is different.</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7"><br>That's why <strong>1-on-1</strong> <strong>help</strong> from an experienced filmmaker is so valuable.<br><br>What if one short conversation could...<br><br>Make your film <strong>twice as strong</strong>?<br>Or <strong>save you thousands</strong> of dollars?<br>Or give you <strong>10x the audience</strong>?<br><br>If my YouTube videos helped you, individual coaching takes that guidance to the next level, allowing me to provide solutions and strategies <strong>specific to you and your film</strong>.<br><br>My goal is to help you&nbsp;<strong>make the best version of your film</strong> and do it with <strong>confidence</strong>.<br><br>I look forward to meeting you.<br><br>-Kent<em><strong><br></strong></em><br></p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="https://calendly.com/standardstoryco" target="_blank">Reserve a Date</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-warning display-4" href="http://bit.ly/3j0Hr1p" target="_blank">Reserve a Date</a></div>
             </div>
         </div>
     </div>
@@ -178,7 +178,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-7">
-                <div class="mbr-section-btn align-center"><a class="btn btn-warning display-4" href="https://calendly.com/standardstoryco" target="_blank">Reserve a Date</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-warning display-4" href="http://bit.ly/3j0Hr1p" target="_blank">Reserve a Date</a></div>
             </div>
         </div>
     </div>
@@ -231,7 +231,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-7">
-                <div class="mbr-section-btn align-center"><a class="btn btn-warning display-4" href="https://calendly.com/standardstoryco" target="_blank">Reserve a Date</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-warning display-4" href="http://bit.ly/3j0Hr1p" target="_blank">Reserve a Date</a></div>
             </div>
         </div>
     </div>
@@ -251,7 +251,7 @@
                             <strong>About Me</strong></h4>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7">I focus on story &amp; substance over style, and take a very practical approach to filmmaking, built from 20+ years of helming scrappy, low &amp; no-budget shoots.<br><br>I directed my first feature film, <em>Bad is Bad</em>, in 2010. Made for only $6,000, the film went on to reach over 7 million views and garner critical acclaim.<br><br>My 2019 short film, <em>Will "The Machine"</em>, screened and won awards at film festivals around the world, before releasing online through Omeleto and gaining 3 million views.<br><br>As an editor, I've done work for brands such as Apple TV, Netflix, Amazon, Sony Pictures, Beats by Dre, Nickelodeon, Air Jordan, Postmates, CollegeHumor, and more.<br><br>I also run the YouTube channel <em>Standard Story Company</em>, entertaining &amp; educating&nbsp;over 115,000 subscribers with original films &amp; filmmaking advice.<br></p>
                         
-                        <div class="mbr-section-btn mb-4"><a class="btn btn-black display-4" href="https://calendly.com/standardstoryco" target="_blank">Reserve a Date</a></div>
+                        <div class="mbr-section-btn mb-4"><a class="btn btn-black display-4" href="http://bit.ly/3j0Hr1p" target="_blank">Reserve a Date</a></div>
                     </div>
                 </div>
             </div>
@@ -275,7 +275,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="teZRhZCL7sJBaW6HunlAgTfBZxMkPGga+gog3Pt+8zTFGv6RzTui7D6/L16nceoqLZxI9oZViVXkK/uQmqDJtdlUnY3YCfrWkYjXADrU2n1UCghnT/Rcqg9rWHaZzUuT">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="CpGLDDFLNigEhaFf5DwF2BCMaCkVNu158U78J1qBXrx5Emj4Yf13KhtjhfzHKyRYgYx4a5gYOPxMSfLTqve9zou9A+vQm7nfwPvWKyt1t8VLpLN0fveArupjPefCZOUx">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
