create github pages

--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="">This page is a sampling of some favorites,<br>click here to see the rest on YouTube.<br></a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://www.youtube.com/@standardstoryco">This page is a sampling of some favorites,<br>click here to see the rest on YouTube.<br></a></div>
             </div>
         </div>
     </div>
