--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BAxHnlbw+LQnhrOVkMImXkFSLPp/OODzLdibXjMPW9w+ytCsp9UNydHNPReQ8cgAGlshpjEfCoqYTTdWzVQ1/rZtHXWo1HSEJCcaSIzHmkDGCBSgd5iFAsXaCJZrMPxd">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="DFtFBECWHyjnuh9KFo0nEkJq4HqxPgkL6lPXfWY4BeNN47HqCwkUseBsjKp7znOp7mhhTXjNGXB2dt01rMJQY2QJE+6OaWQKS4xVEX9PEFojH1fULwzem9PVYEquBIB8">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 -Kent</div>
@@ -93,7 +93,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Films &amp; Videos</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Films &amp; Videos</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page5.html">WRAPPED In 30 Days</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page4.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
