create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -37,7 +37,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
 
-    <nav class="navbar navbar-dropdown navbar-expand-lg">
+    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
@@ -301,7 +301,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="vk8jpzEoSXtFxvyR3JAI/+owT4dwuWSKmZ79pqjG5FjWY3yLDT+I+26N9ve8/FQawnXFmV2P52wIF3TA+H5T/V5FhUCvL8Eo2rZ5GPjK5OHHu4cxgbe7wa97902DbusD">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="T28EVoloud71Ee9cFsBunYBx/LncYZUVSLvh4p+z+iU5gUn/wBvVf8OsHN2jEDg21YL2KTwdMC81u/f5tEitjhrg2veAFyI4pVZRntMH5ArTEHBsyhr9ydujM+Yisiib">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
