--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
 
-    <nav class="navbar navbar-dropdown navbar-expand-lg">
+    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
@@ -85,7 +85,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6slF0p+FYg4m1St35YZMwzcdpW62LBoXWuLBHyGLDvUCswovxuSB1BM4NE/Vfn+vIhJhJ9idWNMsdD4bf8sfbC3Hl8RsN6iKXPvwuuETHHte7FdaGf2o87uZz776kZUX">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Pt6/pW20KEvR4UtqsICI9jD9LvtJz5eH7cr+hJeMU/k6RRTQDLbaZUGCGKtEgJKFgCUVCacu32voQfS15/9ujj5CpSyHL79al/loVG9ULmF2skcC6FZvlh1HmUvlL5SH">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 -Kent</div>
