--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
 
-    <nav class="navbar navbar-dropdown navbar-expand-lg">
+    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
