--- a/page4.html
+++ b/page4.html
@@ -30,7 +30,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+    <nav class="navbar navbar-dropdown navbar-fixed-top collapsed">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
