--- a/page4.html
+++ b/page4.html
@@ -30,7 +30,7 @@
   <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top collapsed">
+    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
@@ -49,7 +49,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Films &amp; Videos</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page5.html">WRAPPED In 30 Days</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="work.html">Films &amp; Videos</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page5.html"><em>WRAPPED in 30 Days</em></a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="consultations.html">Consultations</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="page4.html">Newsletter</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-7" href="contact.html">Contact</a>
                     </li></ul>
                 <div class="icons-menu">
