create github pages

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="witsec-mailform mbr-section cid-tDeueJXsIc" id="witsec-mailform-builder-1q" data-rv-view="306">
+<section class="witsec-mailform mbr-section cid-tDeueJXsIc" id="witsec-mailform-builder-1q" data-rv-view="375">
 
   
 
@@ -91,6 +91,7 @@
     <div class="row justify-content-center">
       <div class="media-container-column col-lg-8">
           <form class="mbr-form">
+<input type="hidden" name="disableButton" value="1">
             
             <input type="hidden" name="subject" value="A message from your website.">
             
