create github pages

--- a/consultations.html
+++ b/consultations.html
@@ -33,6 +33,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCVW3DSCJ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCVW3DSCJ8');
+</script>
+<!-- /Analytics -->
+
+
   
   <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
@@ -301,7 +315,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jBZIjHfVXxsliPeyaHOOu6RZYccXqoF+Sl390BCDfuqOjTxVanF2BHFZ43SN0yC7Og1Kh4XdzZ2SR/O2Db+Px/hvhbWxffblYqHjPt4RYcQ/ysOD1mOcpJ7bifglUGmO">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MDDPWzhplpX1QgagE9Uccs80AJSb5rgnDhMtK8TQtBvDHYGTmOtXiAULVFCFWZR3mzLoouNSGMhLMhJIj8s1UiVJaIF9K5J9S6/C8YAfIP/Wre5XuDtBP+3N0EE942uX">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out!
 I'll get back to you ASAP, usually within 24 hours.
