--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCVW3DSCJ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCVW3DSCJ8');
+</script>
+<!-- /Analytics -->
+
+
   
   <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
@@ -84,7 +98,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Py8Rvd5DpqDeXCPDOF/49qQv6DqpKa/tH+PXFQQwBP7kCr+/bJVoziquJA/APluOxAN54FQ1QkkTywqjkVPEA0hT3ZL8Qw5y5d3K8KqJJwU6zAxZjn8nA9bWiF9hHKOb">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JjVNpzlo0YlSavRdomU9NeweTRAo4LOd7oxjjonvkWcPIKK8beIi8WiC68eja5SU8Ai4pTg39eu3sNHCGoEbsBxx/Mq/N/fKYSquUK5/7IEyrDiOQHvjtk/WQuahsbRD">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Message sent!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
