--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCVW3DSCJ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCVW3DSCJ8');
+</script>
+<!-- /Analytics -->
+
+
   
   <section data-bs-version="5.1" class="menu menu1 cid-tAG5fo3xKn" once="menu" id="menu1-1m">
     
