create github pages

--- a/wrapped.html
+++ b/wrapped.html
@@ -99,7 +99,7 @@
                 <p class="mbr-text mbr-fonts-style display-7">
                     I've been building the ultimate filmmaking course for anyone who wants to write and shoot their own crowd-pleasing short film.<br>To learn more about the course, click below to check out&nbsp;<em>WRAPPED in 30 Days</em>!</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://standardstoryco.teachable.com/p/wrapped-in-30-days?src=sscsite" target="_blank"><em>WRAPPED in 30 Days</em></a></div>
-                <div class="video-wrapper mt-4"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Hvi9xJwLrqE?rel=0&amp;amp;&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper mt-4"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/y2JGEvvBwDI?rel=0&amp;amp;&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
             </div>
         </div>
     </div>
