--- a/newsletter.html
+++ b/newsletter.html
@@ -105,7 +105,7 @@
 
 
 <!-- Place your own code below -->
-<iframe src="https://subscribepage.io/sscnewsletter" width="full" height="1400" seamless="seamless" scrolling="yes" frameborder="0" allowfullscreen="true"></iframe>
+<iframe src="https://subscribepage.io/sscnewsletter" width="full" height="1400" seamless="seamless" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
 <!-- Place your own code above -->
 
 </section><section><a href="https://mobiri.se"></a><a href="https://mobiri.se"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
